Fix FileReader.java (add absolute pathing)