@@ -2,10 +2,11 @@ package hexlet.code;
 
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 
 public class FileReader {
     public static String readFile(String filePath) throws Exception {
-        Path path = Path.of(filePath);
+        Path path = Paths.get(filePath).toAbsolutePath().normalize();
         return Files.readString(path);
     }
 }
